creacion de components

--- a/ProyectoFinal/src/app/components/social/social.component.html
+++ b/ProyectoFinal/src/app/components/social/social.component.html
@@ -1,1 +1,7 @@
-<p>social works!</p>
+<div>
+    <a href=""><img src="../../../assets/logos/linkedin.png" id="linkedin"></a>
+    <a href=""><img src="../../../assets/logos/twitter.png" alt="twitter"></a>
+    <a href=""><img src="../../../assets/logos/instagram.png" alt="instagram"></a>
+    <a href=""><img src="../../../assets/logos/github.png" alt="github"></a>
+    <a href=""><img src="../../../assets/logos/facebook.png" alt="facebook"></a>
+</div>
