--- a/ProyectoFinal/src/app/components/header/header.component.css
+++ b/ProyectoFinal/src/app/components/header/header.component.css
@@ -1,3 +1,8 @@
 div{
-    background-color: aquamarine;
+    background-color:aliceblue;
+}
+
+app-social{
+    float: right;
+    margin-top: 25px;
 }
