--- a/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,15 @@
-<img src="../../../assets/logos/APLogo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/logos/APLogo.png" id="logoAP">
+        </div>
+     <div class="redes">
+    <a href=""><img src="../../../assets/logos/linkedin.png" id="linkedin"></a>
+    <a href=""><img src="../../../assets/logos/twitter.png" alt="twitter"></a>
+    <a href=""><img src="../../../assets/logos/instagram.png" alt="instagram"></a>
+    <a href=""><img src="../../../assets/logos/github.png" alt="github"></a>
+    <a href=""><img src="../../../assets/logos/facebook.png" alt="facebook"></a>
+<button type="button" class="btn btn-outline-light">Inicio Sesion</button>
+</div>
+</div>
+</div>
