--- a/ProyectoFinal/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoFinal/src/app/components/acerca-de/acerca-de.component.css
@@ -1,4 +1,4 @@
-row {
+.row {
     padding: 30px;
 }
 
@@ -12,10 +12,10 @@ div {
     #fotodeperfil {
         position:absolute;
         width: 15%;
-        border-radius: 50%;
+        border-radius: 100%;
         box-shadow: 3px 3px 3px black;
         left: 3%;
-        top: 25px;
+        top: 600px;
     }
 }
 
@@ -23,10 +23,10 @@ div {
     #fotodeperfil {
         position: absolute;
         width: 30%;
-        border-radius: 50%;
+        border-radius: 100%;
         box-shadow: 3px 3px 3px black;
-        left: 5%;
-        top: 30px;
+        left: 33%;
+        top: 950px;
     }
 }
 
