--- a/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.html
@@ -8,7 +8,7 @@
     [outerStrokeWidth]="16"
     [innerStrokeWidth]="8"
     [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
+    [innerStrokeColor]: "#C7E596"
     [animation]="true"
     [animationDuration]="300"
 ></circle-progress>
