--- a/ProyectoFinal/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -9,7 +9,7 @@
     <a href=""><img src="../../../assets/logos/instagram.png" alt="instagram"></a>
     <a href=""><img src="../../../assets/logos/github.png" alt="github"></a>
     <a href=""><img src="../../../assets/logos/facebook.png" alt="facebook"></a>
-<button type="button" class="btn btn-outline-light">Inicio Sesion</button>
+<button type="button" class="btn btn-outline-light"> (click)= "login()" Inicio Sesion</button>
 </div>
 </div>
 </div>
