--- a/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.css
+++ b/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.css
@@ -2,3 +2,9 @@ row{
     background-color: aliceblue;
     padding: 20px;
 }
+
+.circulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
