--- a/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,81 +1,22 @@
 <div class="row">
-    <h1>Hard & Soft Skills</h1>
-    <div class="col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-    [percent]="70"
-    [radius]="100"
-    [title]="'HTML'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]: "#C7E596"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-<circle-progress
-    [percent]="60"
-    [radius]="100"
-    [title]="'GitHub'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-<circle-progress
-    [percent]="50"
-    [radius]="100"
-    [title]="'CSS'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-<circle-progress
-    [percent]="45"
-    [radius]="100"
-    [title]="'Java'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-<circle-progress
-    [percent]="85"
-    [radius]="100"
-    [title]="'Ingles'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-<div class="col-sm-4 col-md-4 col-lg-4">
-<circle-progress
-    [percent]="60"
-    [radius]="100"
-    [title]="'Grupal'"
-    [outerStrokeWidth]="16"
-    [innerStrokeWidth]="8"
-    [outerStrokeColor]="'#78C000'"
-    [innerStrokeColor]="'#C7E596'"
-    [animation]="true"
-    [animationDuration]="300"
-></circle-progress>
-</div>
-</div>
+
+    <h1>Hard & Soft skills</h1>
+    <div class="col-lg-2">
+        <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
+    </div>
+
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+        <circle-progress [percent]="(skill.porcentaje)" [radius]="100" [title]="(skill.nombre)" [outerStrokeWidth]="16"
+            [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true"
+            [animationDuration]="300"></circle-progress>
+
+            <div>
+                <td *ngIf="isLogged">
+                    <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+                        <i class="bi bi-pencil-fill"></i></button>
+                </td>
+                <td *ngIf="isLogged">
+                    <button class="btn btn-danger" (click)="delete(skill.id)">
+                        <i class="bi bi-trash-fill"></i></button>
+                </td>
+            </div>
