--- a/ProyectoFinal/FrontEnd/src/app/components/proyectos/proyectos.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/proyectos/proyectos.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <h1>Proyectos Realizados</h1>
     <div class="contenedor">
+        <div>
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
             <h2>Ningun proyecto realizado</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum possimus nesciunt totam quaerat doloremque corporis fugiat? Facilis nemo nobis ut temporibus. Eligendi repellat facere optio! Quia mollitia illum quibusdam beatae?</p>
@@ -9,4 +10,5 @@
             <img src="../../../assets/logos/imagenproyecto.png" class="img-fluid img-proyecto">
         </div>
     </div>
+</div>
 </div>
