--- a/ProyectoFinal/FrontEnd/src/app/components/hys/new-skill.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/hys/new-skill.component.html
@@ -8,7 +8,8 @@
                 </div>
                 <div class="form-group">
                     <label for="porcentaje">Porcentaje</label>
-                    <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="porcentaje" required>
+                    <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="porcentaje"
+                        required>
                 </div>
                 <button class="btn btn-primary">
                     Agregar skill
@@ -16,3 +17,4 @@
             </form>
         </div>
     </div>
+</div>
