--- a/ProyectoFinal/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/logo-ap/logo-ap.component.html
@@ -3,14 +3,15 @@
         <div class="logo">
             <img src="../../../assets/logos/APLogo.png" id="logoAP">
         </div>
-     <div class="redes">
-    <a href=""><img src="../../../assets/logos/linkedin.png" id="linkedin"></a>
-    <a href=""><img src="../../../assets/logos/twitter.png" alt="twitter"></a>
-    <a href=""><img src="../../../assets/logos/instagram.png" alt="instagram"></a>
-    <a href=""><img src="../../../assets/logos/github.png" alt="github"></a>
-    <a href=""><img src="../../../assets/logos/facebook.png" alt="facebook"></a>
-    <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
-    <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
-</div>
-</div>
+        <div class="redes">
+            <a href=""><img src="../../../assets/logos/linkedin.png" id="linkedin"></a>
+            <a href=""><img src="../../../assets/logos/twitter.png" alt="twitter"></a>
+            <a href=""><img src="../../../assets/logos/instagram.png" alt="instagram"></a>
+            <a href=""><img src="../../../assets/logos/github.png" alt="github"></a>
+            <a href=""><img src="../../../assets/logos/facebook.png" alt="facebook"></a>
+            <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESO</button>
+            <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">CERRAR
+                SESION</button>
+        </div>
+    </div>
 </div>
