--- a/ProyectoFinal/FrontEnd/src/app/components/login/login.component.html
+++ b/ProyectoFinal/FrontEnd/src/app/components/login/login.component.html
@@ -1,77 +1,45 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<div class="container">
-    	<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-login">
-					<div class="panel-heading">
-						<div class="row">
-							<div class="col-xs-6">
-								<a href="#" class="active" id="login-form-link">Iniciar sesión</a>
-							</div>
-							<div class="col-xs-6">
-								<a href="#" id="register-form-link">Regístrate ahora</a>
-							</div>
-						</div>
-						<hr>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-12">
-								<form id="login-form" action="http://phpoll.com/login/process" method="post" role="form" style="display: block;">
-									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Usuario" value="">
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Contraseña">
-									</div>
-									<div class="form-group text-center">
-										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Recordarme</label>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Iniciar sesión">
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-lg-12">
-												<div class="text-center">
-													<a href="http://phpoll.com/recover" tabindex="5" class="forgot-password">¿Has olvidado tu contraseña?</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</form>
-								<form id="register-form" action="http://phpoll.com/register/process" method="post" role="form" style="display: none;">
-									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Usuario" value="">
-									</div>
-									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Correo electronico" value="">
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Contraseña">
-									</div>
-									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirmar contraseña">
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Crear cuenta">
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
+<section class="vh-100 gradient-custom">
+	<div class="container py-5 h-100">
+	  <div class="row d-flex justify-content-center align-items-center h-100">
+		<div class="col-12 col-md-8 col-lg-6 col-xl-5">
+		  <div class="card bg-dark text-white" style="border-radius: 1rem;">
+			<div class="card-body p-5 text-center">
+  
+			  <div class="mb-md-5 mt-md-4 pb-5">
+  
+				<h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+				<p class="text-white-50 mb-5">Por favor, ingresar usuario y clave</p>
+  
+				<form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+  
+				  <div class="form-outline form-white mb-4">
+					<input type="email" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg"
+					  [(ngModel)]="nombreUsuario" required />
+					<label class="form-label" for="nombreUsuario">Usuario</label>
+				  </div>
+  
+				  <div class="form-outline form-white mb-4">
+					<input type="password" id="password" name="password" class="form-control form-control-lg" [(ngModel)]="password"
+					  required />
+					<label class="form-label" for="password">Password</label>
+				  </div>
+  
+				  <!-- <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p> -->
+  
+				  <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+  
+				</form>
+  
+			  </div>
+  
+			  <div>
+				<p class="mb-0">¿No tenes cuenta? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+				</p>
+			  </div>
+  
 			</div>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </section>
