--- a/src/app/components/educacion/neweducacion.component.html
+++ b/src/app/components/educacion/neweducacion.component.html
@@ -10,7 +10,7 @@
                     <label for="descripcionE">Descripcion estudios</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
-                <button class="btn btn-primary">
+                <button type="button" class="btn btn-primary">
                     Agregar educacion
                 </button>
             </form>
