--- a/src/app/components/experiencia/editexperiencia.component.html
+++ b/src/app/components/experiencia/editexperiencia.component.html
@@ -10,7 +10,7 @@
                     <label for="descripcionE">Descripcion tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
                 </div>
-                <button class="btn btn-primary">
+                <button type="button" class="btn btn-primary">
                     Actualizar
                 </button>
             </form>
