--- a/src/app/components/educacion/editeducacion.component.html
+++ b/src/app/components/educacion/editeducacion.component.html
@@ -3,12 +3,12 @@
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre institucion</label>
+                    <label form="nombreE">Nombre institucion</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="educacion.nombreE"
                         required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion estudios</label>
+                    <label form="descripcionE">Descripcion estudios</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE"
                         [(ngModel)]="educacion.descripcionE" required>
                 </div>
