--- a/src/app/components/experiencia/newexperiencia.component.html
+++ b/src/app/components/experiencia/newexperiencia.component.html
@@ -3,16 +3,14 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre  empresa</label>
+                    <label form="nombreE">Nombre  empresa</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion tarea</label>
+                    <label form="descripcionE">Descripcion tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
                 </div>
-                <button class="btn btn-primary">
-                    Agregar experiencia
-                </button>
+                <button class="btn btn-primary">Agregar experiencia</button>
             </form>
         </div>
     </div>
